[workspace]
members = [
    "packages/ai",
    "packages/html",
    "packages/markdown",
    "packages/runtime",
    "packages/shared_rust",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[profile.release]
lto = "thin"
opt-level = 3
strip = true

[profile.test]
codegen-units = 1
