[package]
name = "vurst"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "High-performance Rust text-processing utilities: chunking, HTML sanitization, markdown rendering, AI-text detection, and embeddings prep."
repository = "https://github.com/jonathanong/vurst"
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
ammonia = "4.1.2"
anyhow = "1"
boilerstrip = "0.4"
breadchunks = "=0.2.0"
comrak = { version = "0.52", default-features = false }
data-encoding = "2"
ego-tree = "0.11"
entities = "1.0.1"
hex = "0.4"
hmac = "0.13"
# Exact pin required: is-it-slop 0.5 depends on this specific ort pre-release.
# Update only when is-it-slop bumps its ort requirement.
is-it-slop = { version = "=0.5.0", default-features = false }
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "tracing", "load-dynamic"] }
regex = "1.11"
scraper = "0.27"
serde_json = "1.0"
sha2 = "0.11"
