[package]
name = "vurst-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vurst = { path = "../crate" }
boilerstrip = "0.4"
napi = { version = "3", features = ["serde-json", "tokio_rt"] }
napi-derive = "3"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[build-dependencies]
napi-build = "2"
